[package]
name = "airplay-audio"
version.workspace = true
edition.workspace = true
description = "Audio encoding and RTP streaming for AirPlay 2"

[dependencies]
airplay-core = { path = "../airplay-core" }
airplay-crypto = { path = "../airplay-crypto" }
airplay-timing = { path = "../airplay-timing" }
airplay-resampler = { path = "../airplay-resampler" }
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
symphonia.workspace = true
tracing.workspace = true
socket2.workspace = true
rand.workspace = true
crossbeam-channel = "0.5"
libc = "0.2"
spin_sleep = "1.2"

# Audio codecs
alac-encoder.workspace = true
fdk-aac = { workspace = true, optional = true }

# Audio processing
biquad = "0.4"

[features]
default = []
# AAC encoding (buffered streaming) compiles the vendored fdk-aac C++ source,
# which fails to build with GCC >= 14. HomePod uses ALAC, so AAC is off by default.
aac = ["dep:fdk-aac"]

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
test-case.workspace = true
proptest.workspace = true
hound = "3.5"  # WAV file writing for audio validation tests
